tests/ui/attribute.rs
#![crate_type = "lib"]

#[blah(x(y(note = concat!())))]
struct Foo;